# distaff

./: Cargo.toml  demo  index.html
b2sum-rs/: Cargo.toml
b2sum-rs/src/: lib.rs
src/: lib.rs  main.rs  raw=main.rs
src/crypto/: merkle.rs  mod.rs
src/examples/: merkle.rs
src/lib&main/: gen-lib.rs
src/math/: fft.rs  field.rs  parallel.rs
src/processor/: mod.rs  opcodes.rs
src/processor/decoder/: mod.rs
src/processor/stack/: mod.rs
src/programs/: hashing.rs
src/programs/assembly/: mod.rs  parsers.rs
src/stark/: proof.rs  prover.rs  verifier.rs
src/stark/constraints/: constraint_table.rs  evaluator.rs  utils.rs
src/stark/constraints/decoder/: mod.rs  op_bits.rs
src/stark/constraints/stack/: arithmetic.rs  input.rs  mod.rs
src/stark/trace/: trace_state.rs  trace_table.rs
src/stark/utils/: coefficients.rs  mod.rs
src/utils/: hasher.rs  mod.rs  sponge.rs
