[package]
name = "b2sum-rs"
version = "0.1.0"
edition = "2018"
description = "A Rust Library For Computing The Blake2b Hash with any given Digest Size"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2-rfc = "0.2.18"
hex = "0.4.2"
